--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ setuptools
 wheel
 numpy<2.0.0
 pandas==2.1.4
-pandas-ta
 yfinance
 requests
+pandas_ta @ git+https://github.com/twopirllc/pandas-ta.git@development
