--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 setuptools
 wheel
 numpy<2.0.0
-pandas==2.1.4
+pandas
 yfinance
 requests
-pandas_ta @ git+https://github.com/twopirllc/pandas-ta.git@development
+pandas-ta @ https://github.com/twopirllc/pandas-ta/archive/refs/heads/development.zip
