--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,37 +2,46 @@ name: Daily Swing Scanner
 
 on:
   schedule:
-    # Runs at 3:25 PM IST (09:55 UTC)
-    - cron: '55 9 * * 1-5'
-  workflow_dispatch: # Allows manual click
-
-permissions:
-  contents: write
+    - cron: '30 10 * * 1-5'  # 4:00 PM IST
+  workflow_dispatch:
 
 jobs:
   run-scanner:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # <--- CRITICAL PERMISSION TO SAVE FILES
+
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          
+
       - name: Install Libraries
         run: pip install -r requirements.txt
-        
-      - name: Run Bot
+
+      # 1. Run the Scanner (Finds New Stocks)
+      - name: Run Swing Scanner
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python swing_pro.py
-        
-      - name: Save Memory
+
+      # 2. Run the Manager (Checks Old Trades)
+      - name: Run Trade Manager
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: python trade_manager.py
+
+      # 3. Save the "Notebook" (trades.json)
+      - name: Commit and Push Results
         run: |
-          git config --global user.name "Bot"
-          git config --global user.email "bot@github.com"
-          git add alert_history.json || true
-          git commit -m "Update history" || true
-          git push || true
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add alert_history.json trades.json
+          git commit -m "Update Daily Ledger" || exit 0
+          git push
